added class and layout for webviews

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.mgdllc.linx.linx" >
+    package="com.mgdllc.linx.linx"
+    android:versionCode="2"
+    android:versionName="2.0" >
 
         <uses-sdk android:minSdkVersion="10" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -17,6 +21,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".linx_WebViewClient"
+            android:theme="@android:style/Theme.NoTitleBar" >
+            </activity>
     </application>
-    <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
