--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -24,6 +24,11 @@
         <activity
             android:name=".linx_WebViewClient"
             android:theme="@android:style/Theme.NoTitleBar" >
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:scheme="http"/>
+            </intent-filter>
             </activity>
     </application>
 </manifest>
